<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/right_math_expression_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="143dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="44dp"
        android:text="@string/right_math_expression"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/left_math_expression_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/left_math_expression_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="272dp"
        android:text="@string/left_math_expression"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/equals_button"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginEnd="22dp"
        android:text="@string/equals_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/greater_than_button"
        app:layout_constraintStart_toEndOf="@+id/less_than_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632" />

    <Button
        android:id="@+id/less_than_button"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:text="@string/less_than_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632" />

    <Button
        android:id="@+id/greater_than_button"
        android:layout_width="102dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="31dp"
        android:text="@string/greater_than_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.632" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="284dp"
        android:text="@string/result_text"
        android:textSize="70sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/timer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="177dp"
        android:layout_marginEnd="177dp"
        android:layout_marginBottom="160dp"
        android:text="0"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/total_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:text="0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/right_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:text="0"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/total_text"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wrong_text_large_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="108dp"
        android:text="0"
        android:textSize="50sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/equals_button"
        app:layout_constraintEnd_toStartOf="@+id/right_text_large_number"
        app:layout_constraintHorizontal_bias="0.99"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/right_text_large_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="108dp"
        android:text="0"
        android:textSize="50sp"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/equals_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/wrong_text_large_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="120dp"
        android:layout_marginBottom="75dp"
        android:text="Wrong"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/equals_button"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/right_text_large_string"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginEnd="142dp"
        android:layout_marginBottom="75dp"
        android:text="Right"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/equals_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/wrong_text_large_string" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="307dp"
        android:layout_marginBottom="16dp"
        android:visibility="invisible"
        android:text="BACK"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>